--- a/Python_Homework/lesson_4.2_(Anaconda_and_mathplotlib)/lesson_4.2.ipynb
+++ b/Python_Homework/lesson_4.2_(Anaconda_and_mathplotlib)/lesson_4.2.ipynb
@@ -470,6 +470,7 @@
     }
    ],
    "source": [
+    "# 1) пункт\n",
     "DATA_DIR = \"names\" \n",
     "names_by_year = {}\n",
     "\n",
@@ -511,8 +512,8 @@
     }
    ],
    "source": [
-    "name_dynamics.query('Name == [\"Ruth\", \"Robert\"]').unstack('Name').plot.bar()\n",
-    "\n"
+    "# 2) пункт\n",
+    "name_dynamics.query('Name == [\"Ruth\", \"Robert\"]').unstack('Name').plot.bar()"
    ]
   },
   {
@@ -614,7 +615,7 @@
     }
    ],
    "source": [
-    "\n",
+    "# 3) Как сделать выборку по превой букве \"R\" ?\n",
     "path_to_file = os.path.join(os.getcwd(), 'names/yob1950.txt' )\n",
     "names_all = pd.read_csv(path_to_file, names = ['Name','Gender','Count'])\n",
     "# names_all = names[names.Name == '']\n",
@@ -949,6 +950,7 @@
     }
    ],
    "source": [
+    "# 4 пункт (как Year вставить в х-ось графика)\n",
     "DATA_DIR = \"names\" \n",
     "names_by_year = {}\n",
     "list_len = []\n",
