--- a/Python_Homework/Final/final.ipynb
+++ b/Python_Homework/Final/final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,11 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_list_of_not_deleted_or_banned_friends():\n",
+    "    count_true = 0\n",
+    "    count_false = 0\n",
+    "    all_friend = 0\n",
     "    method = 'friends.get'\n",
     "    url = 'https://api.vk.com/method/' + method\n",
     "    params = {\n",
@@ -49,12 +52,15 @@
     "            'access_token': access_token\n",
     "        }\n",
     "        response = requests.get(url, params).json()\n",
-    "        time.sleep(0.1)\n",
-    "#         print(response)\n",
+    "        time.sleep(0.5)\n",
+    "        print(response)\n",
+    "        all_friend = all_friend + 1\n",
     "        try:\n",
     "            value = response['response'][0]['deactivated']\n",
+    "            count_true = count_true + 1\n",
     "        except KeyError:\n",
     "            list_of_not_deleted_or_banned_friends.append(friend)\n",
+    "            count_false = count_false + 1\n",
     "    #         print('-')\n",
     "    #         print(response)\n",
     "    #     for item in response['response'][0]:\n",
@@ -62,12 +68,13 @@
     "    #             list_of_not_deleted_or_banned_friends.append(friend)\n",
     "    print('-')\n",
     "#     print (list_of_not_deleted_or_banned_friends)\n",
+    "    print ('{} , {}, {}'.format(count_true, count_false, all_friend))\n",
     "    return list_of_not_deleted_or_banned_friends"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +246,9 @@
       "{'response': [{'uid': 401466040, 'first_name': 'Андрей', 'last_name': 'Шмаргунов'}]}\n",
       "{'response': [{'uid': 417989532, 'first_name': 'Евгений', 'last_name': 'Петрович', 'deactivated': 'deleted'}]}\n",
       "{'response': [{'uid': 434109816, 'first_name': 'Римма', 'last_name': 'Шмаргунова'}]}\n",
-      "{'response': [{'uid': 437280430, 'first_name': 'Elizaveta', 'last_name': 'Mironova'}]}\n"
+      "{'response': [{'uid': 437280430, 'first_name': 'Elizaveta', 'last_name': 'Mironova'}]}\n",
+      "-\n",
+      "5 , 160, 165\n"
      ]
     },
     {
@@ -407,7 +416,7 @@
        " 437280430]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1680,30 +1689,6 @@
     "        print('----')\n",
     "        f.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----\n"
-     ]
-    }
-   ],
-   "source": [
-    "write_json_file()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
